deploy/k8s/common/middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-api-prefixes
  namespace: app
spec:
  stripPrefix:
    forceSlash: false
    prefixes:
      - /fast/python-api
