deploy/k8s/common/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-api
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: ionos.ingress-nginx.com
    http:
      paths:
      - path: /fast/python-api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: python-api
            port:
              number: 8000
      - path: /streamlit(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: streamlit
            port:
              number: 8501
